# mpv-mpris

./: .gitignore  CONTINUE.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt  mpris.c  mpris.map
.github/workflows/: build.yml  release.yml
test/: Makefile  clean  embedded-art  env  meson.build  metadata  pause  play  play-pause  setup  stop  wrapper
