metadata_test = find_program('metadata')
pause_test = find_program('pause')
play_test = find_program('play')
play_pause_test = find_program('play-pause')
stop_test = find_program('stop')
quit_test = find_program('quit')
wrapper = find_program('dbus-run-session')
setup = find_program('setup')
env = find_program('env')
clean = find_program('clean')

# All new tests should have a priority of 1, this way the `clean-tests` test runs *after* everything else
test('metadata-test', wrapper, args: ['--', metadata_test.full_path(), setup.full_path(), env.full_path(), mpris_lib.full_path()], timeout: 60, priority: 1)
test('pause-test', wrapper, args: ['--', pause_test.full_path(), setup.full_path(), env.full_path(), mpris_lib.full_path()], timeout: 60, priority: 1)
test('play-test', wrapper, args: ['--', play_test.full_path(), setup.full_path(), env.full_path(), mpris_lib.full_path()], timeout: 60, priority: 1)
test('play-pause-test', wrapper, args: ['--', play_pause_test.full_path(), setup.full_path(), env.full_path(), mpris_lib.full_path()], timeout: 60, priority: 1)
test('stop-test', wrapper, args: ['--', stop_test.full_path(), setup.full_path(), env.full_path(), mpris_lib.full_path()], timeout: 60, priority: 1)
test('quit-test', wrapper, args: ['--', quit_test.full_path(), setup.full_path(), env.full_path(), mpris_lib.full_path()], timeout: 60, priority: 1)
test('clean-tests', clean, is_parallel: false, priority: 0)
